# multibeam-echo-grid-simulator

./: .gitignore  README.md  README.rst  package-list.txt  requirements.txt
examples/: .gitignore  01_visualize_simulation_single_bubble.ipynb  02_visualize_simulation_bubble_stream.ipynb  03_simulate_echo_grid_inversion_single_setup.ipynb  04_batch_simulate.ipynb  05_view_results.ipynb  clear_examples.sh  view_functions.py
examples/other/: 01_visualize_simulation_bubble_stream.ipynb  02_export_sim.ipynb  03_import.ipynb  pyproject.toml  view_functions.py
src/: __init__.py
src/mbes_sim/: mbes.py  scattergrid.py  simulation.py  simulationfunctions.py
src/mbes_sim/functions/: __init__.py  beampatternfunctions.py  create_bubblesfunctions.py  create_echofunctions.py  doc.txt  gridfunctions.py  helperfunctions.py  navfunctions.py  pulsefunctions.py  transformfunctions.py
test_data/: README.md
